--- a/stories/de/0243_ferien-mit-großmutter_slides.html
+++ b/stories/de/0243_ferien-mit-großmutter_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>ایک بہت لمبا آدمی - Global African Storybook</title>
+  <title>Ferien mit Großmutter - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="ایک-بہت-لمبا-ادمی" class="slide level1">
-<h1>ایک بہت لمبا آدمی</h1>
+<section id="ferien-mit-großmutter" class="slide level1">
+<h1>Ferien mit Großmutter</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/02.jpg" /></p>
-<p>اُس کا بیلچہ بہت چھوٹا تھا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/02.jpg" /></p>
+<p>Odongo und Apiyo lebten mit ihrem Vater in der Stadt. Sie freuten sich auf die Ferien. Nicht nur weil sie dann nicht in die Schule mussten, sondern auch weil sie dann ihre Großmutter besuchen würden. Sie lebte in einem Fischerdorf in der Nähe eines großen Sees.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/03.jpg" /></p>
-<p>اُس کا دروازہ بہت چھوٹا تھا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/03.jpg" /></p>
+<p>Odongo und Apiyo freuten sich, dass es Zeit war ihre Großmutter zu besuchen. Am Abend davor packten sie ihre Taschen und bereiteten sich für die lange Reise zu ihrem Dorf vor. Sie konnten nicht schlafen und redeten die ganze Nacht über den Urlaub.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/04.jpg" /></p>
-<p>اُس کا بستر بہت چھوٹا تھا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/04.jpg" /></p>
+<p>Früh am nächsten Morgen machten sie sich im Auto ihres Vaters zum Dorf auf. Sie fuhren an Bergen, wilden Tieren und Teeplantagen vorbei. Die zählten Autos und sangen Lieder.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/05.jpg" /></p>
-<p>اُس کا سائیکل بہت چھوٹا تھا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/05.jpg" /></p>
+<p>Nach einer Weile waren die Kinder müde und schliefen ein.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/06.jpg" /></p>
-<p>یہ آدمی بہت لمبا تھا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/06.jpg" /></p>
+<p>Vater weckte Odongo und Apiyo als sie im Dorf angekommen waren. Nyar-Kanyada, ihre Großmutter, lag auf einer Matte unter einem Baum und entspannte. Nyar-Kanyada in Luo bedeutet 'Tochter des Volkes von Kanyada'. Sie war eine schöne und starke Frau.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/07.jpg" /></p>
-<p>اُس نے ایک بہت لمبا بیلچہ بنایا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/07.jpg" /></p>
+<p>Nyar-Kanyada bat sie ins Haus und tanzte freudig im Zimmer herum. Ihre Enkelkinder überreichten ihr begeistert ihre Geschenke. &quot;Öffne mein Geschenk zuerst&quot;, sagte Odongo. &quot;Nein, meins zuerst!&quot;, entgegnete Apiyo.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/08.jpg" /></p>
-<p>اُس نے ایک بہت اُونچا دروازہ بنایا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/08.jpg" /></p>
+<p>Nachdem sie die Geschenke geöffnet hatte, segnete Nyar-Kanyada ihre Enkelkinder auf traditionelle Art.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/09.jpg" /></p>
-<p>اُس نے ایک بہت لمبا بستر بنایا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/09.jpg" /></p>
+<p>Dann gingen Odongo und Apiyo nach draußen. Sie jagten Schmetterlingen und Vögeln nach.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/10.jpg" /></p>
-<p>اُس نے ایک بہت اُونچا سائیکل خریدا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/10.jpg" /></p>
+<p>Sie kletterten auf Bäume und planschten im See.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/11.jpg" /></p>
-<p>وہ ایک بہت اُونچی کر سی پر بیٹھا۔ اُس نے بہت لمبے کانٹے سے کھانا کھایا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/11.jpg" /></p>
+<p>Als es dunkel war gingen sie zum Abendessen ins Haus zurück. Noch bevor sie fertig waren, schliefen sie ein.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/12.jpg" /></p>
-<p>اُس نے اپنا گھر چھوڑ دیا اور جنگل میں رہنے لگا۔ وہ وہاں کئی سالوں تک رہا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/12.jpg" /></p>
+<p>Am nächsten Tag fuhr der Vater zurück in die Stadt und ließ die Kinder Nyar-Kanyada.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,12 +195,93 @@
 </section>
 <section class="slide level1">
 
-<h2 id="ایک-بہت-لمبا-ادمی-1">ایک بہت لمبا آدمی</h2>
-<strong>Text:</strong> Cornelius Gulere<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/13.jpg" /></p>
+<p>Odongo und Apiyo halfen ihrer Großmutter im Haushalt. Sie holten Wasser und Feuerholz. Sie sammelten Eier von den Hühnern und ernteten Gemüse aus dem Garten.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/14.jpg" /></p>
+<p>Nyar-Kanyada lehrte ihre Enkelkinder, wie man weichen Ugali als Beilage für den Eintopf zubereitet. Sie zeigte ihnen, wie man Kokosreis als Beilage für Bratfisch macht.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/15.jpg" /></p>
+<p>Eines Morgens brachte Odongo Großmutters Kühe zum Grasen. Sie liefen hinüber zur Nachbarsfarm. Der Bauer war sehr böse auf Odongo. Er drohte, die Kühe als Entschädigung zu behalten. Von dort an passte der Junge genau auf, dass die Kühe keine Schwierigkeiten mehr machten.</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/16.jpg" /></p>
+<p>An einem anderen Tag gingen die Kinder mit Nyar-Kanyada zum Markt. Sie hatte einen Stand, wo sie Gemüse, Zucker und Seife verkaufte. Apiyo hatte Spaß dabei, den Kunden die Preise für Dinge zu nennen. Odongo packte die Artikel ein, die die Kunden kauften.</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/17.jpg" /></p>
+<p>Am Ende des Tages tranken sie einen Chaitee zusammen. Sie halfen Großmutter das eingenommene Geld zu zählen.</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/18.jpg" /></p>
+<p>Aber all zu schnell waren die Ferien zu Ende und die Kinder mussten in die Stadt zurückkehren. Nyar-Kanyada gab Odongo eine Kappe und Apiyo ein Sweatshirt. Sie packte Essen für die Reise.</p>
+<center>
+<strong>17</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/19.jpg" /></p>
+<p>Als ihr Vater kam, um sie abzuholen, wollten sie nicht gehen. Die Kinder flehten Nyar-Kanyada an mit ihnen in die Stadt mitzukommen. Sie lächelte und sagte: &quot;Ich bin zu alt für die Stadt. Ich werde darauf warten, dass ihr wieder zu mir ins Dorf kommt.&quot;</p>
+<center>
+<strong>18</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/20.jpg" /></p>
+<p>Odongo und Apiyo umarmten sie fest zum Abschied.</p>
+<center>
+<strong>19</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/21.jpg" /></p>
+<p>Als Odongo und Apiyo wieder in die Schule gingen erzählten sie ihren Freunden vom Dorfleben. Manchen Kinder fanden das Leben in der Stadt gut. Aber vor allem waren sich alle einig, dass Odongo und Apiyo eine wundervolle Großmutter hatten!</p>
+<center>
+<strong>20</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="ferien-mit-großmutter-1">Ferien mit Großmutter</h2>
+<strong>Text:</strong> Violet Otieno<br> <strong>Veranschaulichung:</strong> Catherine Groenewald<br> <strong>Übersetzung:</strong> Anna Westpfahl<br> <strong>Sprache:</strong> Deutsch<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/very-tall-man'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/holidays-grandmother'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
