--- a/stories/ur/0001_ایک-بہت-لمبا-آدمی.html
+++ b/stories/ur/0001_ایک-بہت-لمبا-آدمی.html
@@ -84,7 +84,7 @@ Cornelius Gulere<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/07.jpg" /></p>
 
-<p>اُس نے ایک بہت بڑا بیلچہ بنایا۔</p>
+<p>اُس نے ایک بہت لمبا بیلچہ بنایا۔</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
