--- a/stories/ur/0003_سکول-کا-لباس_slides.html
+++ b/stories/ur/0003_سکول-کا-لباس_slides.html
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/09.jpg" /></p>
-<p>یہ ٹھیک ہیں۔۔۔</p>
+<p>۔۔۔ یہ پورے ہیں۔</p>
 <center>
 <strong>8</strong>
 </center>
