--- a/stories/ur/0006_انانسی-اور-عقل.html
+++ b/stories/ur/0006_انانسی-اور-عقل.html
@@ -49,7 +49,7 @@ Ghanaian folktale<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/02.jpg" /></p>
 
-<p>کافی عرصہ پہلے لوگوں کو کچھ معلوم نہیں ہوتا تھا۔ اُنہیں نہیں پتہ تھا کہ پودے کیسے لگانے ہیں اور کپڑے کیسے بُننے ہیں اور لوہے کے ہتھار کیسے بنانے ہیں۔ اور خدا نیامے جو کہ آسمان پر مو جو د ہے ساری دُنیا کی عقل رکھتا ہے۔ اُس نے اسے مٹی کے ایک برتن میں سنبھل رکھا ہے۔</p>
+<p>کافی عرصہ پہلے لوگوں کو کچھ معلوم نہیں ہوتا تھا۔ اُنہیں نہیں پتہ تھا کہ پودے کیسے لگانے ہیں اور کپڑے کیسے بُننے ہیں اور لوہے کےاوزار کیسے بنانے ہیں۔ اور خدا نیامے جو کہ آسمان پر مو جو د ہے ساری دُنیا کی عقل رکھتا ہے۔ اُس نے اسے مٹی کے ایک برتن میں سنبھل رکھا تھا۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -63,28 +63,28 @@ Ghanaian folktale<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/04.jpg" /></p>
 
-<p>لالچی انانسی نے سوچا کہ یہ مٹی کا برتن ایک لمبے درخت کی چوٹی پر محفوظ رہے گا۔ تب یہ سب کچھ میر ا ہو گا۔ اُس نے ایک لمبی رسی بُنی اور مٹی کے برتن کے ارد گرد اور اپنی کمر پر باندھ دی اور وہ درخت پر چڑھائی کرے لگا لیکن درخت پر چڑھائی کرنا کافی مشکل تھا کیونکہ مٹی کا برتن بار بار اُس کےگُھٹنوں سے ٹکرا رہا تھا۔</p>
+<p>لالچی انانسی نے سوچا کہ میں یہ مٹی کا برتن ایک لمبے درخت کی چوٹی پر محفوظ رکھوں گا۔ تب یہ سب کچھ میر ا ہو گا۔ اُس نے ایک لمبی رسی بُنی اور مٹی کے برتن کے ارد گرد اور اپنی کمر پر باندھ دی اور وہ درخت پر چڑھنے لگا لیکن درخت پر چڑھائی کرنا کافی مشکل تھا کیونکہ مٹی کا برتن بار بار اُس کےگُھٹنوں سے ٹکرا رہا تھا۔</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/05.jpg" /></p>
 
-<p>ہر وقت انسانی کا چھوٹا بیٹا درخت کے نیچے کھڑے یہ سب دیکھتا اور کہتا۔ کیا یہ سب آسان نہیں ہو گا اگر آپ اس مٹی کے برتن کو اپنی کمر سے باندھ لیں؟ انانسی نے عقل سےبھرے اُس مٹی کے برتن کو اپنی کمر سے باندھنے کی کو شش کی اور یہ سب بہت آسان تھا۔</p>
+<p>سارا وقت انا نسی کا چھوٹا بیٹا درخت کے نیچے کھڑے یہ سب دیکھتا اور کہتا۔ کیا یہ سب آسان نہیں ہو گا اگر آپ اس مٹی کے برتن کو اپنی کمر سے باندھ لیں؟ انانسی نے عقل سےبھرے اُس مٹی کے برتن کو اپنی کمر سے باندھنے کی کو شش کی اور یہ سب بہت آسان تھا۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/06.jpg" /></p>
 
-<p>اُسے وقت نہیں لگا اور وہ درخت کی چوٹی پر پہنچ گیا۔ لیکن پھر وہ رکا اور اُس نے سوچا میں اکیلا ساری عقل کا مالک ہوں لیکن نیچے کھڑا میرا بیٹا مجھ سے زیا دہ عقل مند ہے۔ انسانسی اس بات سے بہت خفا ہو ا اُس نے مٹی کا برتن درخت سے نیچے گرا دیا۔</p>
+<p>اُسے وقت نہیں لگا اور وہ درخت کی چوٹی پر پہنچ گیا۔ لیکن پھر وہ رکا اور اُس نے سوچا میں اکیلا ساری عقل کا مالک ہوں لیکن نیچے کھڑا میرا بیٹا مجھ سے زیا دہ عقل مند ہے۔ انانسی اس بات سے اتنا خفا ھوا کہ اُس نے مٹی کا برتن درخت سے نیچے گرا دیا۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/07.jpg" /></p>
 
-<p>وہ زمین پر گر کر ٹکڑے ٹکڑے ہو گیا۔ اب عقل سب میں بانٹنے کے لیے آزادی تھی۔ اور اسطرح لو گوں نے پودے لگانا، کپڑے بُننا، لو ہے کے ہتھیا ر بنانا اور باقی تمام چیزیں کرنا سیکھیں۔</p>
+<p>وہ زمین پر گر کر ٹکڑے ٹکڑے ہو گیا۔ اب عقل سب میں بانٹنے کے لیے آزادی تھی۔ اور اسطرح لو گوں نے پودے لگانا، کپڑے بُننا، لو ہے کے اوزار بنانا اور باقی تمام چیزیں کرنا سیکھیں۔</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
