--- a/stories/ur/0027_فیصلہ.html
+++ b/stories/ur/0027_فیصلہ.html
@@ -63,7 +63,7 @@ Ursula Nafula<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/04.jpg" /></p>
 
-<p>چوروں کی وجہ سے ہم نے اپنے گھروں کو بند کر دیا۔</p>
+<p>چوروں کی وجہ سے ہم نے اپنے گھروں کوجلدی بند کر دیا۔</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -112,7 +112,7 @@ Ursula Nafula<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/11.jpg" /></p>
 
-<p>میرے باپ نے گھر سے گھر جانے کے لئے گھر سے گاؤں کے اجلاس میں شرکت کرنے سے کہا۔</p>
+<p>میرے باپ نے گھر گھر جا کےلوگوں کو گاؤں کے اجلاس میں شرکت کرنےکےلیے کہا۔</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
@@ -133,7 +133,7 @@ Ursula Nafula<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/14.jpg" /></p>
 
-<p>ایک درخت پر بیٹھ کر آٹھ سالہ جمعہ نے کہا، ‘میں صفائی کے ساتھ مدد کر سکتا ہوں۔’</p>
+<p>ایک درخت پر بیٹھے آٹھ سالہ جمعہ نے کہا، ‘میں صفائی میں مدد کر سکتا ہوں۔’</p>
 
 <div class="pagenum">13</div>
 <p></div><div class="pagebreak"></p>
@@ -154,7 +154,7 @@ Ursula Nafula<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/17.jpg" /></p>
 
-<p>ہم سب نے ایک آواز سے کہا، ‘ہمیں اپنی زندگی کو تبدیل کرنا ہوگا۔’ اس دن سے ہم نے اپنی مسائل کو حل کرنے کے ساتھ مل کر کام کیا۔</p>
+<p>ہم سب نے ایک آواز سے کہا، ‘ہمیں اپنی زندگی کو تبدیل کرنا ہوگا۔’ اس دن سے ہم نے اپنے مسائل کو حل کرنے کےلیے ساتھ مل کر کام کیا۔</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
