--- a/stories/ur/0027_فیصلہ_slides.html
+++ b/stories/ur/0027_فیصلہ_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/04.jpg" /></p>
-<p>چوروں کی وجہ سے ہم نے اپنے گھروں کو بند کر دیا۔</p>
+<p>چوروں کی وجہ سے ہم نے اپنے گھروں کوجلدی بند کر دیا۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/11.jpg" /></p>
-<p>میرے باپ نے گھر سے گھر جانے کے لئے گھر سے گاؤں کے اجلاس میں شرکت کرنے سے کہا۔</p>
+<p>میرے باپ نے گھر گھر جا کےلوگوں کو گاؤں کے اجلاس میں شرکت کرنےکےلیے کہا۔</p>
 <center>
 <strong>10</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/14.jpg" /></p>
-<p>ایک درخت پر بیٹھ کر آٹھ سالہ جمعہ نے کہا، 'میں صفائی کے ساتھ مدد کر سکتا ہوں۔'</p>
+<p>ایک درخت پر بیٹھے آٹھ سالہ جمعہ نے کہا، 'میں صفائی میں مدد کر سکتا ہوں۔'</p>
 <center>
 <strong>13</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/17.jpg" /></p>
-<p>ہم سب نے ایک آواز سے کہا، 'ہمیں اپنی زندگی کو تبدیل کرنا ہوگا۔' اس دن سے ہم نے اپنی مسائل کو حل کرنے کے ساتھ مل کر کام کیا۔</p>
+<p>ہم سب نے ایک آواز سے کہا، 'ہمیں اپنی زندگی کو تبدیل کرنا ہوگا۔' اس دن سے ہم نے اپنے مسائل کو حل کرنے کےلیے ساتھ مل کر کام کیا۔</p>
 <center>
 <strong>16</strong>
 </center>
