--- a/stories/ur/0030_احساسات.html
+++ b/stories/ur/0030_احساسات.html
@@ -63,7 +63,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>اردو</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/04.jpg" /></p>
 
-<p>جب میں اپنے دوست کے ساتھ کھیلتا ہوں تو میں پاگل پن محسوس کرتا ہوں۔</p>
+<p>جب میں اپنے دوستوں کے ساتھ کھیلتا ہوں تو میں پاگل پن محسوس کرتا ہوں۔</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
