--- a/stories/ur/0066_نوزیبیلے-اور-تین-بال_slides.html
+++ b/stories/ur/0066_نوزیبیلے-اور-تین-بال_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>ایک بہت لمبا آدمی - Global African Storybook</title>
+  <title>نوزیبیلے اور تین بال - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="ایک-بہت-لمبا-ادمی" class="slide level1">
-<h1>ایک بہت لمبا آدمی</h1>
+<section id="نوزیبیلے-اور-تین-بال" class="slide level1">
+<h1>نوزیبیلے اور تین بال</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/02.jpg" /></p>
-<p>اُس کا بیلچہ بہت چھوٹا تھا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/02.jpg" /></p>
+<p>کافی عرصہ پہلے تین لڑکیاں لکڑیاں اکھٹی کرنے باہر نکلیں۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/03.jpg" /></p>
-<p>اُس کا دروازہ بہت چھوٹا تھا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/03.jpg" /></p>
+<p>وہ ایک گرم دن تھا اس لیے وہ نیچے دریا میں تیرنے چلی گئیں۔ وہ پانی میں کھلیں اور مل کر پانی اچھالا۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/04.jpg" /></p>
-<p>اُس کا بستر بہت چھوٹا تھا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/04.jpg" /></p>
+<p>اچانک اُنہیں احساس ہو ا کہ کافی دیر ہو چکی ہے۔ وہ واپس گاوں کی طرف بھاگیں۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/05.jpg" /></p>
-<p>اُس کا سائیکل بہت چھوٹا تھا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/05.jpg" /></p>
+<p>گھر کے قریب پہنچ کر نوزیبیلے نے اپنا ہاتھ گردن پر رکھا۔ وہ اپنا ہار کہیں بھول آئی۔ میرے ساتھ واپس چلو اُس نے اپنی دوستوں سے منت کی، لیکن اُس کی دوستوں نے دیر ہونے کی وجہ سے انکار کر دیا۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/06.jpg" /></p>
-<p>یہ آدمی بہت لمبا تھا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/06.jpg" /></p>
+<p>اس لیے نوزیبیلے اکیلی در یا پر چلی گئی۔ اُسے اپنا ہار ملا اور وہ گھر کی طرف بھاگی۔ لیکن وہ اندھیرے میں کھو گئی۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/07.jpg" /></p>
-<p>اُس نے ایک بہت لمبا بیلچہ بنایا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/07.jpg" /></p>
+<p>دور فاصلے پر اُسے ایک جھونپڑی سے روشنی آتی دیکھائی دی۔ وہ بھاگتی ہوئی اُس کے پاس پہنچی اور دروازے پر دستک دی۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/08.jpg" /></p>
-<p>اُس نے ایک بہت اُونچا دروازہ بنایا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/08.jpg" /></p>
+<p>وہ حیرت زدہ تھی، کہ ایک کتے نے دروازہ کھولا اور پوچھا 'تمہیں کیا چاہیے؟' نوزیبیلے نے کہا کہ میں کھو گئی ہو ں، مجھے سونے کے لیے جگہ چاہیے۔ کتے نے کہا اندر آجاوٴ ورنہ تو میں تمہیں کاٹوں گا۔ اس لیے نوزیبیلے اندر آگئی۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/09.jpg" /></p>
-<p>اُس نے ایک بہت لمبا بستر بنایا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/09.jpg" /></p>
+<p>پھر کتے نے کہا میرے لیے کھانا پکاو! لیکن میں نے کبھی کتے کے لیے کھانا نہیں بنایا اُس نے جواب دیا۔ پکاو، ورنہ میں تمہیں کاٹ لوں گا کتے نے کہا۔ اس لیے نوزیبیلے نےکتے کے لیے کچھ کھانا پکایا۔</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/10.jpg" /></p>
-<p>اُس نے ایک بہت اُونچا سائیکل خریدا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/10.jpg" /></p>
+<p>پھر کتے نے کہا، میرے لیے بستر لگاو! نوزیبیلے نے جو اب دیا میں نے کبھی کتے کے لیے بستر نہیں لگایا۔ کتے نے کہا بستر لگاو، ورنہ میں تمہیں کاٹ جاوٴں گا۔ اس لیے نوزیبیلے نے بستر لگایا۔</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/11.jpg" /></p>
-<p>وہ ایک بہت اُونچی کر سی پر بیٹھا۔ اُس نے بہت لمبے کانٹے سے کھانا کھایا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/11.jpg" /></p>
+<p>ہر دن اُسے کھانا پکانا پڑتا اورکتے کے لیے صفائی ستھرائی کا خیال رکھنا پڑتا۔ پھر ایک دن کتے نے کہا نوزیبیلے آج مجھے کچھ دوستوں سے ملنے جانا ہے۔ گھر صاف کر دو۔ جب تک میں واپس آوں کھانا بناوٴ اور میری چیزیں دھو دو۔</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/12.jpg" /></p>
-<p>اُس نے اپنا گھر چھوڑ دیا اور جنگل میں رہنے لگا۔ وہ وہاں کئی سالوں تک رہا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/12.jpg" /></p>
+<p>کتے کے جانے کے فوراً بعد نوزیبیلے نے اپنے سر سے تین بال نکالے۔ ایک بال اُس نے بستر کے نیچے رکھا، ایک بال دروازے کے پیچھے اور ایک بال باڑے میں رکھا۔ پھر وہ گھر کی طرف بھاگی جتنا تیز وہ بھاگ سکتی تھی۔</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,12 +195,30 @@
 </section>
 <section class="slide level1">
 
-<h2 id="ایک-بہت-لمبا-ادمی-1">ایک بہت لمبا آدمی</h2>
-<strong>Text:</strong> Cornelius Gulere<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/13.jpg" /></p>
+<p>جب کتا واپس آیا، اُس نے نوزیبیلے کو تلاش کیا۔ نوزیبیلے، تم کہاں ہو؟ وہ چلایا۔ میں یہاں ہو ں بستر کے نیچے، پہلے بال نے آواز دی۔ میں یہاں ہوں دروازے کے پیچھے دوسرے بال نے آواز دی۔ میں یہاں باڑے میں ہوں، تیسرے بال نے آواز دی۔</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/14.jpg" /></p>
+<p>پھر کتے کو پتہ چل گیا کہ نوزیبیلے اُس کے ساتھ کھیل کھیل رہی ہے۔ اس لیے وہ گاوں کی طرف بھاگا۔ لیکن نوزیبیلے کے بھائی وہاں ہاتھوں میں بڑے بڑے ڈنڈے لیے اسکا انتظار کر رہے تھے۔ کتا واپس مڑا اور بھاگ گیا اور آج تک کبھی دکھائی نہیں دیا۔</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="نوزیبیلے-اور-تین-بال-1">نوزیبیلے اور تین بال</h2>
+<strong>Text:</strong> Tessa Welch<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/very-tall-man'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/nozibele-and-three-hairs'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
