--- a/stories/ur/0089_کھلائی-پودوں-سے-بات-کرتی-ہے_slides.html
+++ b/stories/ur/0089_کھلائی-پودوں-سے-بات-کرتی-ہے_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>ایک بہت لمبا آدمی - Global African Storybook</title>
+  <title>کھلائی پودوں سے بات کرتی ہے - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="ایک-بہت-لمبا-ادمی" class="slide level1">
-<h1>ایک بہت لمبا آدمی</h1>
+<section id="کھلائی-پودوں-سے-بات-کرتی-ہے" class="slide level1">
+<h1>کھلائی پودوں سے بات کرتی ہے</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/02.jpg" /></p>
-<p>اُس کا بیلچہ بہت چھوٹا تھا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
+<p>یہ کھلائی ہے۔ وہ سات سال کی ہے۔ اس کی زبان لبوکوسو میں اس کے نام کا مطلب ہے، 'بہت اچھا'۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/03.jpg" /></p>
-<p>اُس کا دروازہ بہت چھوٹا تھا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/03.jpg" /></p>
+<p>کھلائی اٹھتی ہے اور مالٹوں کے درخت سے بات کرتی ہے۔ 'براہ کرم مالٹے کے درخت، بڑے ہو جاؤ اور ہمیں بہت زیادہ مالٹے دو۔'</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/04.jpg" /></p>
-<p>اُس کا بستر بہت چھوٹا تھا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
+<p>کھلائی اسکول کی طرف چلتی ہے۔ اور راستے میں وہ گھاس سے بات کرتی ہے۔ 'براہ کرم گھاس سبز ہو جاو، اور سوکھنا مت۔'</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/05.jpg" /></p>
-<p>اُس کا سائیکل بہت چھوٹا تھا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/05.jpg" /></p>
+<p>کھلائی جنگلی پھولوں کے پاس سے گزرتی ہے۔ 'براہ کرم پھول ترو تازہ رہو تا کہ میں تمہیں اپنے بالوں میں لگا سکوں۔'</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/06.jpg" /></p>
-<p>یہ آدمی بہت لمبا تھا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
+<p>اسکول میں کھلائی درخت کے وسط میں درخت سے بات کی۔ 'درخت برائے مہربانی، بڑے شاخیں نکالو تاکہ ہم آپ کے سایہ کے نیچے پڑھ سکیں۔'</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/07.jpg" /></p>
-<p>اُس نے ایک بہت لمبا بیلچہ بنایا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/07.jpg" /></p>
+<p>کھلائی اپنے اسکول کے ارد گرد جنگلے سے بات کرتی ہے۔ 'براہ کرم مضبوط ہو جاؤ اور خراب لوگوں کو آنے سے روک دو۔'</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/08.jpg" /></p>
-<p>اُس نے ایک بہت اُونچا دروازہ بنایا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
+<p>جب کھلائی اسکول سے گھر واپس آتی ہے، تو وہ مالٹوں کے درخت کے پاس جاتی ہے کھلائی پوچھتی ہے 'کیا تمہارے مالٹے پک گئے ا ہے؟'</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/09.jpg" /></p>
-<p>اُس نے ایک بہت لمبا بستر بنایا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
+<p>مالٹے ابھی بھی کچے ہیں کھلائی نے آہ بھری۔ میں تم سے کل ملنے آوں گی مالٹوں کے درخت کھلائی نے کہا۔ شائد تٓب تمہارے پاس میرے لیے ایک رس بھرا مالٹا مو جو د ہو۔</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,39 +168,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/10.jpg" /></p>
-<p>اُس نے ایک بہت اُونچا سائیکل خریدا۔</p>
-<center>
-<strong>9</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/11.jpg" /></p>
-<p>وہ ایک بہت اُونچی کر سی پر بیٹھا۔ اُس نے بہت لمبے کانٹے سے کھانا کھایا۔</p>
-<center>
-<strong>10</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/12.jpg" /></p>
-<p>اُس نے اپنا گھر چھوڑ دیا اور جنگل میں رہنے لگا۔ وہ وہاں کئی سالوں تک رہا۔</p>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="ایک-بہت-لمبا-ادمی-1">ایک بہت لمبا آدمی</h2>
-<strong>Text:</strong> Cornelius Gulere<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
+<h2 id="کھلائی-پودوں-سے-بات-کرتی-ہے-1">کھلائی پودوں سے بات کرتی ہے</h2>
+<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Jesse Pietersen<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/very-tall-man'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/khalai-talks-plants'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
