--- a/stories/ur/0110_ایک-چھوٹا-بیج-ونگاری-ماتھائی-کی-کہانی_slides.html
+++ b/stories/ur/0110_ایک-چھوٹا-بیج-ونگاری-ماتھائی-کی-کہانی_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/04.jpg" /></p>
-<p>سورج غروب ہونے کے فوراً بعد کا وقت اُس کا پسندیدہ وقت تھا۔ جب پودے دیکھنے کے لیے کافی اندھیرا ہو گیا تو ونگاری کو معلوم تھا کہ اب اُسے گھر جانا ہے۔ وہ کھیتوں کے تنگ راستوں اور دریا کو پار کرتی ہوئی نکلی۔</p>
+<p>سورج غروب ہونے کے فوراً بعد کا وقت اُس کا پسندیدہ وقت تھا۔ جب پودے دیکھنے کے لیے کافی اندھیرا ہو گیا تو ونگاری کو معلوم تھا کہ اب اُسے گھر جانے کا وقت ہے۔ وہ کھیتوں کےدرمیان تنگ راستوں سے دریا کو پار کرتی ہوئی نکلی۔</p>
 <center>
 <strong>3</strong>
 </center>
