--- a/stories/ur/0243_دادی-کے-ساتھ-چھٹیاں_slides.html
+++ b/stories/ur/0243_دادی-کے-ساتھ-چھٹیاں_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/04.jpg" /></p>
-<p>اگلی صبح جلد ہی وہ اپنے ابو کی گاڑی میں گاوں کے لیے روانہ ہوئے۔ وہ پرانے پہاڑوں، جنگلی جانوروں اور چائے کے پودوں کے پاس سے گزرے۔ اُنہوں نے گاڑیاں گنیں اور گانے گائے۔</p>
+<p>اگلی صبح جلد ہی وہ اپنے ابو کی گاڑی میں گاوں کے لیے روانہ ہوئے۔ وہ پہاڑوں، جنگلی جانوروں اور چائے کے پودوں کے پاس سے گزرے۔ اُنہوں نے گاڑیاں گنیں اور گانے گائے۔</p>
 <center>
 <strong>3</strong>
 </center>
