--- a/stories/ur/0262_مگوزوے.html
+++ b/stories/ur/0262_مگوزوے.html
@@ -126,7 +126,7 @@ Lesley Koyi<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/13.jpg" /></p>
 
-<p>مگوزوے نے اُس نئی جگہ اور سکول جانے کے بارے میں سوچا، کیا ہو اگر اُس کے چچا کی کہی بات ٹھیک نکلی اور وہ واقعی پڑھ لکھ نہ سکا؟ کیا ہوگا اگر اُس نئی جگہ پر اُسے مار پڑی؟ وہ خوف ذدہ تھا کہ شاہد گلی میں رہنا ہی بہتر ہے اُس نے سوچا۔</p>
+<p>مگوزوے نے اُس نئی جگہ اور سکول جانے کے بارے میں سوچا، کیا ہو اگر اُس کے چچا کی کہی بات ٹھیک نکلی اور وہ واقعی پڑھ لکھ نہ سکا؟ کیا ہوگا اگر اُس نئی جگہ پر اُسے مار پڑی؟ وہ خوف ذدہ تھا کہ شاید گلی میں رہنا ہی بہتر ہے اُس نے سوچا۔</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
