--- a/stories/ur/0291_وسی-کی-بہن-نے-کیا-کہا؟.html
+++ b/stories/ur/0291_وسی-کی-بہن-نے-کیا-کہا؟.html
@@ -70,28 +70,28 @@ Nina Orange<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/05.jpg" /></p>
 
-<p>لڑےوسی کو چھیڑنے کے لیے شرمندہ تھے۔ ہم تمہیں مدد کیک کے لیے تو نہیں کر سکتے، لیکن یہ چلنے کے لیے لکڑی تمہاری بہن کے لیے رکھ لو۔ ایک لڑکے نے کہا۔ وسی نے سفر جاری رکھا۔</p>
+<p>لڑکےوسی کو تنگ کرنے پر شرمندہ تھے۔ ہم کیک کے لیے توتمہاری مدد نہیں کر سکتے، لیکن یہ چلنے کے لیے چھڑی اپنی بہن کے لیے رکھ لو۔ ایک لڑکے نے کہا۔ وسی نے سفر جاری رکھا۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/06.jpg" /></p>
 
-<p>راستے میں وہ دو مردوں سے ملا جو کہ گھر تعمیر کر رہے تھے۔ کیا ہم یہ مضبوط لکڑی استعمال کر سکتے ہیں؟ ایک نے پوچھا؟ لیکن لکڑی گھر تعمیر کرنے کے لیے اتنی مضبوط نہ تھی اور وہ ٹوٹ گئی۔</p>
+<p>راستے میں وہ دو مردوں سے ملا جو کہ گھر تعمیر کر رہے تھے۔ کیا ہم یہ مضبوط چھڑی استعمال کر سکتے ہیں؟ ایک نے پوچھا؟ لیکن چھڑی گھر تعمیر کرنے کے لیے اتنی مضبوط نہ تھی اور وہ ٹوٹ گئی۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/07.jpg" /></p>
 
-<p>یہ تم نے کیا کیا؟ وسی رویا! یہ لکڑی میری بہن کا تحفہ تھا۔ پھل چننے والوں نے مجھے یہ تحفہ دیا کیونکہ اُنہوں نے کیک کے لیے انڈہ توڑ دیا۔ کیک میری بہن کی شادی کے لیے تھا۔ اب میرے پاس نہ انڈہ ہے، نہ کیک اور نہ ہی کوئی تحفہ۔ میری بہن کیا کہے گی؟</p>
+<p>یہ تم نے کیا کیا؟ وسی رویا! یہ چھڑی میری بہن کا تحفہ تھا۔ پھل چننے والوں نے مجھے یہ تحفہ دیا کیونکہ اُنہوں نے کیک کے لیے انڈہ توڑ دیا۔ کیک میری بہن کی شادی کے لیے تھا۔ اب میرے پاس نہ انڈہ ہے، نہ کیک اور نہ ہی کوئی تحفہ۔ میری بہن کیا کہے گی؟</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/08.jpg" /></p>
 
-<p>تعمیر کرنے والے لکڑی توڑنے پر شرمندہ ہوئے۔ ہم تمہاری مدد کیک کے لیے نہیں کر سکتے۔ لیکن تمہاری بہن کے لیے کچھ گھاس ہے۔ ایک نے کہا۔ اور وسی نے اپناسفر جاری رکھا۔</p>
+<p>تعمیر کرنے والے چھڑی توڑنے پر شرمندہ ہوئے۔ ہم تمہاری مدد کیک کے لیے نہیں کر سکتے۔ لیکن تمہاری بہن کے لیے کچھ گھاس ہے۔ ایک نے کہا۔ اور وسی نے اپناسفر جاری رکھا۔</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -105,7 +105,7 @@ Nina Orange<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/10.jpg" /></p>
 
-<p>یہ تم نے کیا کیا؟ وسی رویا! وہ گھاس میری بہن کے لیے تحفہ تھا۔ تعمیر کرنے والوں نے مجھے وہ کھاس دیا کیونکہ اُنہوں نے پھل چننے والوں کی دی ہوئی لکڑی توڑ دی۔ پھل چننے والوں نے مجھے وہ لکڑی دی کیونکہ اُنہوں نے وہ انڈا توڑ دیا جو میری بہن کی شادی کے کیک کے لیے تھا۔ اور کیک میری بہن کی شادی کے لیے تھا۔ اب نہ میرے پاس انڈہ ہے، یہ کیک ہے، نہ ہی تحفہ۔ میری بہن کیا کہے گی؟</p>
+<p>یہ تم نے کیا کیا؟ وسی رویا! وہ گھاس میری بہن کے لیے تحفہ تھا۔ تعمیر کرنے والوں نے مجھے وہ کھاس دیا کیونکہ اُنہوں نے پھل چننے والوں کی دی ہوئی چھڑی توڑ دی۔ پھل چننے والوں نے مجھے وہ چھڑی دی کیونکہ اُنہوں نے وہ انڈا توڑ دیا جو میری بہن کی شادی کے کیک کے لیے تھا۔ اور کیک میری بہن کی شادی کے لیے تھا۔ اب نہ میرے پاس انڈہ ہے، یہ کیک ہے، نہ ہی تحفہ۔ میری بہن کیا کہے گی؟</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
@@ -126,7 +126,7 @@ Nina Orange<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/13.jpg" /></p>
 
-<p>اب میں کیا کروں؟ وسی رویا! وہ گائے جو بھاگ گئی ایک تحفہ تھی اُس گھاس کے بدے جو مجھے تعمیر کرنے والوں نے دیا۔ تعمیر کرنے والوں نے مجھے وہ گھاس اس لیے دیا کیونکہ اُنہوں نے مجھے پھل چننے والوں کی طرف سے دی گئی لکڑی کو توڑ دیا تھا۔ پھل چننے والوں نے مجھے وہ لکڑی اس لیے دی کیونکہ اُنہوں نے کیک کے لیے انڈا توڑ دیا تھا۔ کیک شادی کے لیے تھا۔ اب نہ انڈہ ہے، نہ کیک اور نہ ہی کوئی تحفہ۔</p>
+<p>اب میں کیا کروں؟ وسی رویا! وہ گائے جو بھاگ گئی ایک تحفہ تھی اُس گھاس کے بدے جو مجھے تعمیر کرنے والوں نے دیا۔ تعمیر کرنے والوں نے مجھے وہ گھاس اس لیے دی کیونکہ اُنہوں نے مجھے پھل چننے والوں کی طرف سے دی گئی چھڑی کو توڑ دیا تھا۔ پھل چننے والوں نے مجھے وہ چھڑی اس لیے دی کیونکہ اُنہوں نے کیک کے لیے انڈا توڑ دیا تھا۔ کیک شادی کے لیے تھا۔ اب نہ انڈہ ہے، نہ کیک اور نہ ہی کوئی تحفہ۔</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
