--- a/stories/index.html
+++ b/stories/index.html
@@ -1720,6 +1720,12 @@
       <td><a name="de0234"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0243</td>
+      <td><a href="/stories/de/0243_ferien-mit-großmutter_slides.html" target="_blank">Ferien mit Großmutter</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSGhmRl9nMlNWaG8"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="de0243"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0253</td>
       <td><a href="/stories/de/0253_mein-bilderbuch_slides.html" target="_blank">Mein Bilderbuch</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSGhmRl9nMlNWaG8"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -5606,13 +5612,13 @@
     </tr>
     <tr>
       <td>0052</td>
-      <td><a href="/stories/ur/0052_سمبیگورے_slides.html" target="_blank">سمبیگویرے</a></td>
+      <td><a href="/stories/ur/0052_سمبیگویرے_slides.html" target="_blank">سمبیگویرے</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ur0052"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0066</td>
-      <td><a href="/stories/ur/0066_نوزی-بیلے-اور-تین-بال_slides.html" target="_blank">نوزیبیلے اور تین بال</a></td>
+      <td><a href="/stories/ur/0066_نوزیبیلے-اور-تین-بال_slides.html" target="_blank">نوزیبیلے اور تین بال</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ur0066"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
@@ -5624,7 +5630,7 @@
     </tr>
     <tr>
       <td>0072</td>
-      <td><a href="/stories/ur/0072_ہنی-گائیڈ-کا-بدلہ_slides.html" target="_blank">ہنی گائیڈ کا بدلہ</a></td>
+      <td><a href="/stories/ur/0072_شہد-خور-چڑیا-کا-بدلہ_slides.html" target="_blank">شہد خور چڑیا کا بدلہ</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ur0072"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
@@ -5636,7 +5642,7 @@
     </tr>
     <tr>
       <td>0089</td>
-      <td><a href="/stories/ur/0089_خلائی-پودوں-سے-بات-کرتی-ہے_slides.html" target="_blank">کھلائی پودوں سے بات کرتی ہے</a></td>
+      <td><a href="/stories/ur/0089_کھلائی-پودوں-سے-بات-کرتی-ہے_slides.html" target="_blank">کھلائی پودوں سے بات کرتی ہے</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ur0089"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
@@ -5684,7 +5690,7 @@
     </tr>
     <tr>
       <td>0156</td>
-      <td><a href="/stories/ur/0156_بھوکھا-مگرمچرچھ_slides.html" target="_blank">بھوکھا مگرمچھ</a></td>
+      <td><a href="/stories/ur/0156_بھوکھا-مگرمچھ_slides.html" target="_blank">بھوکھا مگرمچھ</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ur0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
@@ -6371,7 +6377,7 @@
       <td>0243</td>
       <td><a href="http://africanstorybook.org/stories/holidays-grandmother">Holidays with grandmother</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0243">ar</a>, <a href="#bn0243">bn</a>, <a href="#es0243">es</a>, <a href="#fa0243">fa</a>, <a href="#it0243">it</a>, <a href="#ko0243">ko</a>, <a href="#nn0243">nn</a>, <a href="#no0243">no</a>, <a href="#pa0243">pa</a>, <a href="#pl0243">pl</a>, <a href="#tl0243">tl</a>, <a href="#tr0243">tr</a>, <a href="#ur0243">ur</a>, <a href="#yue0243">yue</a>, <a href="#zh0243">zh</a></td>
+      <td><a href="#ar0243">ar</a>, <a href="#bn0243">bn</a>, <a href="#de0243">de</a>, <a href="#es0243">es</a>, <a href="#fa0243">fa</a>, <a href="#it0243">it</a>, <a href="#ko0243">ko</a>, <a href="#nn0243">nn</a>, <a href="#no0243">no</a>, <a href="#pa0243">pa</a>, <a href="#pl0243">pl</a>, <a href="#tl0243">tl</a>, <a href="#tr0243">tr</a>, <a href="#ur0243">ur</a>, <a href="#yue0243">yue</a>, <a href="#zh0243">zh</a></td>
     </tr>
     <tr>
       <td>0248</td>
