--- a/stories/ur/0003_سکول-کا-لباس.html
+++ b/stories/ur/0003_سکول-کا-لباس.html
@@ -98,7 +98,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>اردو</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/09.jpg" /></p>
 
-<p>یہ ٹھیک ہیں۔۔۔</p>
+<p>۔۔۔ یہ پورے ہیں۔</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
