--- a/stories/ur/0004_بکری،-کتا-اور-گائے.html
+++ b/stories/ur/0004_بکری،-کتا-اور-گائے.html
@@ -49,7 +49,7 @@ Fabian Wakholi<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/02.jpg" /></p>
 
-<p>بکری، کتا اور گائے بہت اچھے دوست تھے۔ ایک دن وہ لوگ ٹیکسی پر سفر کرنے لکلے۔</p>
+<p>بکری، کتا اور گائے بہت اچھے دوست تھے۔ ایک دن وہ ٹیکسی پر سفر کرنے لکلے۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -70,7 +70,7 @@ Fabian Wakholi<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/05.jpg" /></p>
 
-<p>جب ڈرائیور کتے کو اُس کا بقایا دینے ہی لگا تو بکری بغیر کرایہ ادا کیے بغیر بھاگ گئی۔</p>
+<p>جب ڈرائیور کتے کو اُس کا بقایا دینے ہی لگا تو بکری کرایہ ادا کیے بغیر بھاگ گئی۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
