--- a/stories/ur/0004_بکری،-کتا-اور-گائے_slides.html
+++ b/stories/ur/0004_بکری،-کتا-اور-گائے_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/02.jpg" /></p>
-<p>بکری، کتا اور گائے بہت اچھے دوست تھے۔ ایک دن وہ لوگ ٹیکسی پر سفر کرنے لکلے۔</p>
+<p>بکری، کتا اور گائے بہت اچھے دوست تھے۔ ایک دن وہ ٹیکسی پر سفر کرنے لکلے۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/05.jpg" /></p>
-<p>جب ڈرائیور کتے کو اُس کا بقایا دینے ہی لگا تو بکری بغیر کرایہ ادا کیے بغیر بھاگ گئی۔</p>
+<p>جب ڈرائیور کتے کو اُس کا بقایا دینے ہی لگا تو بکری کرایہ ادا کیے بغیر بھاگ گئی۔</p>
 <center>
 <strong>4</strong>
 </center>
