--- a/stories/ur/0030_احساسات_slides.html
+++ b/stories/ur/0030_احساسات_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/04.jpg" /></p>
-<p>جب میں اپنے دوست کے ساتھ کھیلتا ہوں تو میں پاگل پن محسوس کرتا ہوں۔</p>
+<p>جب میں اپنے دوستوں کے ساتھ کھیلتا ہوں تو میں پاگل پن محسوس کرتا ہوں۔</p>
 <center>
 <strong>3</strong>
 </center>
