--- a/stories/ur/0052_سمبیگویرے_slides.html
+++ b/stories/ur/0052_سمبیگویرے_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>ایک بہت لمبا آدمی - Global African Storybook</title>
+  <title>سمبیگویرے - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="ایک-بہت-لمبا-ادمی" class="slide level1">
-<h1>ایک بہت لمبا آدمی</h1>
+<section id="سمبیگویرے" class="slide level1">
+<h1>سمبیگویرے</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/02.jpg" /></p>
-<p>اُس کا بیلچہ بہت چھوٹا تھا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/02.jpg" /></p>
+<p>جب سمبیگویرے کی ماں مر گئی تو وہ بہت اداس تھی۔ سمبیگویرے کے والد نے اپنی بیٹی کی دیکھ بھال کرنے کے لئے اپنی پوری کوشش کی۔ آہستہ آہستہ، انہوں نے سمبیگویرے کی ماں کے بغیر دوبارہ خوشی محسوس کرنا سیکھ لیا۔ ہر روز انہوں نے بیٹھ کر دن کے بارے میں بات کی۔ ہر شام انہوں نے ایک ساتھ رات کا کھانا بنایا۔ انہوں نے برتن دھونے کے بعد، سمبیگویرے کے والد نے اسے گھر کے کام میں اُس کی مدد کی۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/03.jpg" /></p>
-<p>اُس کا دروازہ بہت چھوٹا تھا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/03.jpg" /></p>
+<p>ایک دن، سمبیگویرے کے والد معمول سے ہٹ کر گھر آ گئے۔ اُنہوں نے کہا کہ 'میرے بچے تم کہاں ہو؟' سمبیگویرے اپنے باپ کی طرف بھاگی۔ وہ اپنے باپ کا ہاتھ کسی عورت کے ہاتھ میں دیکھ کر رک گئی۔ میرے بچے میں تمہیں۔ کسی خاص انسان سے ملوانا چاہتا ہوں۔ یہ انیتا ہیں اُنہوں نے مسکراتے ہوئے کہا۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/04.jpg" /></p>
-<p>اُس کا بستر بہت چھوٹا تھا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/04.jpg" /></p>
+<p>انیتا نے کہا 'ہیلو سمبیگویرے، آپ کے والد نے مجھے آپ کے بارے میں بہت کچھ بتایاہے'۔ لیکن نہ وہ مسکرائی اورنہ لڑکی سے ہاتھ ملایا۔ سمبیگویرے کے والد خوش تھے۔ انہوں نے ان تینوں کےمل کررہنےکے بارے میں بات کی، اور ان کی زندگی کتنی اچھی ہوگی۔ انہوں نے کہا، 'میرا بچہ، مجھے امید ہے کہ آپ انیتا کو آپنی ماں کے طور پر قبول کریں گی'۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/05.jpg" /></p>
-<p>اُس کا سائیکل بہت چھوٹا تھا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/05.jpg" /></p>
+<p>سمبیگویرے کی زندگی بدل گئی۔ اب اُسے اپنے والد کے ساتھ صبح بیٹھنے کا زیادہ وقت نہیں ملتا تھا۔ انیتا نے اسے بہت سے گھریلو کاموں میں لگا دیا تھا وہ اتنا تھک جاتی کہ شام میں اپنے سکول کا کام بھی نہ کر پاتی۔ وہ کھانا کھانے کے بعد سیدھا اپنے بستر کی طرف چلی جاتی۔ اُس کی زندگی میں سکون کی وجہ صرف اُس کی ماں کی طرف سے دیا گیا ایک خوبصورت کمبل تھا۔ سمبیگویرے کے والد اس بات کا اندازہ نہ لگا سکے کہ اُن کی بیٹی نا خوش ہے۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/06.jpg" /></p>
-<p>یہ آدمی بہت لمبا تھا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/06.jpg" /></p>
+<p>چند ماہ کے بعد، سمبیگویرے کے والد نے ان سے کہا کہ وہ کچھ عرصہ گھر سے دور رہیں گے۔ انہوں نے کہا کہ 'مجھے اپنے نوکری کے لیے سفر کرنا ہے۔' 'لیکن میں جانتا ہوں کہ آپ ایک دوسرے کا خیال رکھیں گے۔' سمبیگویرے کا چہرہ اُتر گیا، لیکن اس کے والد نے غور نہیں کیا۔ انیتا نے کچھ بھی نہیں کہاوہ بھی نا خوش تھی۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/07.jpg" /></p>
-<p>اُس نے ایک بہت لمبا بیلچہ بنایا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/07.jpg" /></p>
+<p>سمبیگویرے کے لئے صورتحال اور خراب ہوگئی۔ اگر وہ اپنے کام وقت پر ختم نہ کرتی یا شکایت کرتی تو انیتا اُسے مارتی۔ اور کھانے کے وقت وہ خود زیا دہ کھاتی اور سمبیگویرے کو بچے ہوئے چند ٹکڑے دیتی۔ ہر رات سمبیگویرے سونے سے پہلےاپنی ماں کے دیےہوے کمبل کو سینے سے لگا کے روتی۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/08.jpg" /></p>
-<p>اُس نے ایک بہت اُونچا دروازہ بنایا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/08.jpg" /></p>
+<p>ایک صبح سمبیگویرے دیر سے اُٹھی۔ ّسست لڑکیٗ! انیتا چلائی۔ اُس نے اُسے بستر سے دھکا دے کر نیچے گرایا۔ قیمتی کمبل کیل سے اٹک کر دو ٹکڑوں میں بٹ گیا۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/09.jpg" /></p>
-<p>اُس نے ایک بہت لمبا بستر بنایا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/09.jpg" /></p>
+<p>سمبیگویرے بہت پریشان تھی۔ اس نے گھر سے بھاگنے کا فیصلہ کیا۔ اس نے اپنی ماں کے کمبل کے ٹکڑوں کو لے لیا، کچھ کھانا پکڑا اور گھر چھوڑ دیا۔ اُس نے اپنے والد کی اختیار کی گئی سڑک پر چلنا شروع کر دیا۔</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/10.jpg" /></p>
-<p>اُس نے ایک بہت اُونچا سائیکل خریدا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/10.jpg" /></p>
+<p>جب شام ہوئی تو وہ ایک ندی کے قریب لمبے درخت پر چڑھ کر شاخوں میں خود اپنا بستر بنا یا۔ اور گانا گاتے ہوئے سو گئی 'امی، امی، امی، آپ نے مجھے چھوڑ دیا۔ آپ نے مجھے چھوڑ دیا اور واپس کبھی نہیں آئیں۔ ابّا اب مجھ سے محبت نہیں کرتے۔ ماں، آپ کب واپس آ رہی ہیں؟ آپ نے مجھے چھوڑ دیا۔'</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/11.jpg" /></p>
-<p>وہ ایک بہت اُونچی کر سی پر بیٹھا۔ اُس نے بہت لمبے کانٹے سے کھانا کھایا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/11.jpg" /></p>
+<p>اگلی صبح، سمبیگویرے نے گانا دوبارہ گانا شروع کر دیا۔ جب خواتین اپنے کپڑے ندی میں دھونے کے لئے آئیں تو اُنہوں نے غمگین گانے کی آوازسُنی جو کہ لمبے درخت سے آ رہی تھی۔ انہوں نے سوچا کہ یہ صرف ہوا سے ہلتے ہوئے پتوں کی آواز ہے اور اپنا کام جاری رکھا۔ لیکن اُن میں ایک عورت نے غور سے اُس گانے کو سُنا۔</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/12.jpg" /></p>
-<p>اُس نے اپنا گھر چھوڑ دیا اور جنگل میں رہنے لگا۔ وہ وہاں کئی سالوں تک رہا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/12.jpg" /></p>
+<p>اس عورت نے درخت میں دیکھا۔ جب اس نے لڑکی اور رنگا رنگ کمبل کے ٹکڑوں کو پکڑے دیکھا، اُس نے پکارا، 'میرے بھائی کی بچی!' باقی عورتوں کپڑے دھونا بند کیا اور سمبیگویرے کو درخت سے سے نیچے اُتارنے میں مدد کی۔ اُس کی خالہ نے اُسے گلے سے لگایا تاکہ وہ راحت محسوس کرے۔</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,12 +195,57 @@
 </section>
 <section class="slide level1">
 
-<h2 id="ایک-بہت-لمبا-ادمی-1">ایک بہت لمبا آدمی</h2>
-<strong>Text:</strong> Cornelius Gulere<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/13.jpg" /></p>
+<p>سمبیگویرے کی پھپھو بچی کو اپنے گھر لے گئی۔ اس نے سمبیگویرے کو گرم کھانا دیا۔ اور اس کی ماں کے کمبل کے ساتھ بستر میں سلا دیا۔ اس رات، سمبیگویرے روئی اور سو گئی۔ لیکن وہ راحت کے آنسو تھے۔ وہ جانتی تھی کہ اس کی پھپھو اس کی دیکھ بھال کریں گی۔</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/14.jpg" /></p>
+<p>جب سمبیگویرے کے والد گھر واپس آ گئے تو اسے اپنی بیٹئی کا کمرہ خالی ملا 'کیا ہوا، انیتا؟' اس نے افسُردہ دل سے پوچھا۔ عورت نے وضاحت کی کہ سمبیگویرے بھاگ گئی ہے۔ انہوں نے کہا کہ 'میں چاہتی تھی کہ وہ میرا احترام کرے۔' 'لیکن شاید میں بہت سخت تھی۔' سمبیگویرے کے باپ نے گھر چھوڑ دیا اور ندی کی سمت میں چلا گیا۔ وہ اپنی بہن کے گاؤں کی طرف چلتے گئے کہ شائد کسی نے سمبیگویرے کو دیکھا ہو۔</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/15.jpg" /></p>
+<p>جب اس کے والد نے دور سے دیکھا تو سمبیگویرے اپنے کزن کے ساتھ کھیل رہی تھی۔ وہ خوفزدہ تھی کہ والد ناراض ہوسکتے ہیں، لہذا وہ گھر کے اندر چھپنے کے لیے بھاگ گئی۔ لیکن اس کے والد اس کے پاس گئے اور کہا، 'سمبیگویرے، آپ نے اپنے لیے ایک بہترین ماں پائی ہے۔ جو آپ سے پیار کرتی ہے اور آپ کا حال جانتی ہے۔ مجھے تم پر فخر ہے اور میں تم سے پیار کرتا ہوں۔' انہوں نے اس بات سے اتفاق کیا کہ جب تک وہ چاہتی ہے اپنی پھپھو کے ساتھ رہ سکتی ہے۔</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/16.jpg" /></p>
+<p>اس کا والد ہر روز وہاں جاتے تھے۔ بالآخر وہ انیتا کے ساتھ آئے۔ وہ سمبیگویرے کی طرف بھاگی۔ انہوں نے کہا۔ 'مجھے بہت افسوس ہے، میں غلط تھی۔' 'کیا آپ مجھے دوبارہ کوشش کرنے دیں گی؟' سمبیگویرے نے اپنے والد اور ان کے پریشان کن چہرے کو دیکھا۔ پھر اس نے آہستہ آہستہ قدم بڑھایا اور انیتا کو گلے سے لگا لیا۔</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/17.jpg" /></p>
+<p>اگلے ہفتے انیتا نے سمبیگویرے اور اس کے کزن کو اوراس کی پھپھو کو اُن کے ساتھ کھانا کھانے کے لئے مدعو کیا۔ کیا دعوت ہے! انیتا نے سمبیگویرے کے پسندیدہ کھانے تیار کیے، اور ہر ایک نے خوب کھایا جب تک اُن کا پیٹ نہ بھرا گیا۔ پھر بچے کھیلتے رھے جبکہ بڑوں نے بات چیت کی۔ سمبیگویرے نے اپنے آپ کو خوش اور بہادر محسوس کیا۔ اس نے جلد ہی فیصلہ کیا کہ وہ جلد ہی گھر واپس آئے گی اور اپنے باپ اور سوتیلی ماں کے ساتھ رہے گی۔</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="سمبیگویرے-1">سمبیگویرے</h2>
+<strong>Text:</strong> Rukia Nantale<br> <strong>Illustrations:</strong> Benjamin Mitchley<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/very-tall-man'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/simbegwire'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
