--- a/stories/ur/0120_بال.html
+++ b/stories/ur/0120_بال.html
@@ -84,7 +84,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>اردو</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/07.jpg" /></p>
 
-<p>زینیلے نے اپنے بالوں میں کنگھی کی۔</p>
+<p>زنیلے نے اپنے بالوں میں کنگھی کی ہے۔</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
