--- a/stories/ur/0120_بال_slides.html
+++ b/stories/ur/0120_بال_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/07.jpg" /></p>
-<p>زینیلے نے اپنے بالوں میں کنگھی کی۔</p>
+<p>زنیلے نے اپنے بالوں میں کنگھی کی ہے۔</p>
 <center>
 <strong>6</strong>
 </center>
