--- a/stories/ur/0201_گدھا-بچہ.html
+++ b/stories/ur/0201_گدھا-بچہ.html
@@ -49,7 +49,7 @@ Lindiwe Matshikiza<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/02.jpg" /></p>
 
-<p>یہ ایک چھوٹی سی لڑکی تھی۔ جس نے دور فاصلے پر ایک پر اصرار چیز دیکھی۔</p>
+<p>یہ ایک چھوٹی سی لڑکی تھی۔ جس نے دور فاصلے پر ایک پراسرار چیز دیکھی۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -105,14 +105,14 @@ Lindiwe Matshikiza<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/10.jpg" /></p>
 
-<p>اب اگر بچہ چھوٹا رہتا تو ہر چیز مختلف ہوتی۔ لیکن گدھا بچہ بڑے سے بڑا ہوتا گیا حتیٰ کہ وہ اپنی ماں کی پیٹھ پر پورا نہ آتا۔ اور باوجود اس کے کہ اُس نے بہت کوشش کی لیکن وہ ایک انسان کی طرح برتاو نہ کر سکتا۔ اُس کی ماں اکثر تھک جاتی اور تنگ آجاتی۔ بعض اوقات وہ اُسے باقی جانوروں کے لیے کام کرواتی۔</p>
+<p>اب اگر بچہ چھوٹا رہتا تو ہر چیز مختلف ہوتی۔ لیکن گدھا بچہ بڑے سے بڑا ہوتا گیا حتیٰ کہ وہ اپنی ماں کی پیٹھ پر پورا نہ آتا۔ اور باوجود اس کے کہ اُس نے بہت کوشش کی لیکن وہ ایک انسان کی طرح برتاو نہ کر سکتا۔ اُس کی ماں اکثر تھک جاتی اور تنگ آجاتی۔ بعض اوقات وہ اُس سے جانوروں والے کام کرواتی۔</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/11.jpg" /></p>
 
-<p>کشیدگی اور غصہ گدھے میں بڑتا چلا گیا، وہ یہ نہیں کر سکتا تھا وہ، وہ نہیں کر سکتا تھا، وہ ایسا نہیں ہو سکتا تھا، وہ ویسا نہیں ہو سکتا تھا۔ وہ اتنا غصہ ہوا کہ ایک ان اُس نے اپنی ماں کو لات مار کر میدان میں پھینکا۔</p>
+<p>کشیدگی اور غصہ گدھے میں بڑھتا چلا گیا، وہ یہ نہیں کر سکتا تھا وہ، وہ نہیں کر سکتا تھا، وہ ایسا نہیں ہو سکتا تھا، وہ ویسا نہیں ہو سکتا تھا۔ وہ اتنا غصہ ہوا کہ ایک ان اُس نے اپنی ماں کو لات مار کر میدان میں پھینکا۔</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
@@ -126,7 +126,7 @@ Lindiwe Matshikiza<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/13.jpg" /></p>
 
-<p>وقت کے ساتھ اُس نے بھاگنا بند کیا، رات ہو چکی تھیاور گدھا کھو گیا تھا۔ ہی ہا؟ وہ اندھیرے میں سر سرایا۔ ہی ہا؟ آواز واپس گونجی۔ وہ اکیلا تھا خود کو ایک گیند کی طرح گول کر کے وہ ایک گہری اور درد ناک نیند میں سو گیا۔</p>
+<p>وقت کے ساتھ اُس نے بھاگنا بند کیا، رات ہو چکی تھی اور گدھا کھو گیا تھا۔ ہی ہا؟ وہ اندھیرے میں سر سرایا۔ ہی ہا؟ آواز واپس گونجی۔ وہ اکیلا تھا خود کو ایک گیند کی طرح گول کر کے وہ ایک گہری اور درد ناک نیند میں سو گیا۔</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
