--- a/stories/ur/0243_دادی-کے-ساتھ-چھٹیاں.html
+++ b/stories/ur/0243_دادی-کے-ساتھ-چھٹیاں.html
@@ -63,7 +63,7 @@ Violet Otieno<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/04.jpg" /></p>
 
-<p>اگلی صبح جلد ہی وہ اپنے ابو کی گاڑی میں گاوں کے لیے روانہ ہوئے۔ وہ پرانے پہاڑوں، جنگلی جانوروں اور چائے کے پودوں کے پاس سے گزرے۔ اُنہوں نے گاڑیاں گنیں اور گانے گائے۔</p>
+<p>اگلی صبح جلد ہی وہ اپنے ابو کی گاڑی میں گاوں کے لیے روانہ ہوئے۔ وہ پہاڑوں، جنگلی جانوروں اور چائے کے پودوں کے پاس سے گزرے۔ اُنہوں نے گاڑیاں گنیں اور گانے گائے۔</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
