--- a/stories/ur/0294_دادی-کے-کیلے_slides.html
+++ b/stories/ur/0294_دادی-کے-کیلے_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/06.jpg" /></p>
-<p>دو دن بعد دادی نے مجھے اپنے کمرے سے اپنی چلنے والی لکڑی اُٹھانے کے لیے بھیجا۔ جلد از جلد میں نے دروازہ کھولا تو خوب پکے ہوئے کیلوں کی خوشبو نے میرا استقبال کیا۔ اندرونی کمرے میں دادی کا بڑا جادو تھا جو کہ وہ ٹوکری تھی۔ وہ ایک پرانے کمبل کی مدد سے بہت اچھی طرح چھپائی گئی تھی۔ میں نے اُسے اُٹھایا اور اُس کی بے مثال خوشبو سے محضوز ہوا۔</p>
+<p>دو دن بعد دادی نے مجھے اپنے کمرے سے اپنی چلنے والی لکڑی اُٹھانے کے لیے بھیجا۔ جلد از جلد میں نے دروازہ کھولا تو خوب پکے ہوئے کیلوں کی خوشبو نے میرا استقبال کیا۔ اندرونی کمرے میں دادی کا بڑا جادو تھا جو کہ وہ ٹوکری تھی۔ وہ ایک پرانے کمبل کی مدد سے بہت اچھی طرح چھپائی گئی تھی۔ میں نے اُسے اُٹھایا اور اُس کی بے مثال خوشبو سے محزوز ہوا۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/07.jpg" /></p>
-<p>دادی کی آواز نے مجھے چوکنا کر دیا، تم کیا کر رہے ہو؟ جلدی میری لکڑی لے کر آو۔ میں تیزی سے اُن کی لکڑی لے کر پہنچا۔ تم کس وجہ سے مسکرا رہے ہوَ؟ دادی نے پوچھا؟ اُن کے اس سوال نے مجھے احساس دلایا کہ میں اب بھی اُن کی جادوئی جگہ کو ایجاد کرنے پر مسکرا رہا ہوں۔</p>
+<p>دادی کی آواز نے مجھے چوکنا کر دیا، تم کیا کر رہے ہو؟ جلدی میری لکڑی لے کر آو۔ میں تیزی سے اُن کی لکڑی لے کر پہنچا۔ تم کس وجہ سے مسکرا رہے ہوَ؟ دادی نے پوچھا؟ اُن کے اس سوال نے مجھے احساس دلایا کہ میں اب بھی اُن کی جادوئی جگہ کو دریافت کرنے پر مسکرا رہا ہوں۔</p>
 <center>
 <strong>6</strong>
 </center>
