--- a/stories/ur/0324_وہ-دن-جب-میں-نے-شہر-کے-لیے-گھر-چھوڑا_slides.html
+++ b/stories/ur/0324_وہ-دن-جب-میں-نے-شہر-کے-لیے-گھر-چھوڑا_slides.html
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/12.jpg" /></p>
-<p>جیسے ہی بس، بس سٹاپ سے نکلی میں نے کھڑکی سے باہر جھنکا، میں نے سوچا کہ کیا کبھی میں دوبارہ گاوں واپس آ پاوں گا۔</p>
+<p>جیسے ہی بس، بس سٹاپ سے نکلی میں نے کھڑکی سے باہر جھانکا، میں نے سوچا کہ کیا کبھی میں دوبارہ گاوں واپس آ پاوں گا۔</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/13.jpg" /></p>
-<p>جیسے سفر شروع ہوتا گیا، بس کے اندر گرمی شدت اور بڑھ گئی۔ میں نے نیند کی امید کرتے ہوئے اپنی آنکھوں کو بند کر لیا۔</p>
+<p>سفر کے دوران، بس کے اندر گرمی شدت اور بڑھ گئی۔ میں نے نیند کی امید کرتے ہوئے اپنی آنکھوں کو بند کر لیا۔</p>
 <center>
 <strong>12</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/14.jpg" /></p>
-<p>لیکن میرا دماغ گھر کی طرف جھکا۔ کیا میری ماں محفوظ ہوگی؟ کیا میرے خرگوش کوئی پیسہ لا سکیں گے؟ کیا میرا بھائی میرے چھوٹے پودوں کو پانی دے کا؟</p>
+<p>لیکن میرا دماغ گھر کی طرف جھکا۔ کیا میری ماں محفوظ ہوگی؟ کیا میرے خرگوش کوئی پیسہ لا سکیں گے؟ کیا میرا بھائی میرے چھوٹے پودوں کو پانی دے گا؟</p>
 <center>
 <strong>13</strong>
 </center>
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/16.jpg" /></p>
-<p>نو کھنٹوں بعد میں گاوں کے لیے واپس جانے والی لگائی گئی آوازوں کے شور سے نیند سے بیدار ہوا۔ میں نے اپنا چھوٹا سے بیگ دبوچا اور بس سے باہر چھلانگ لگا دی۔</p>
+<p>نو گھنٹوں بعد میں گاوں کے لیے واپس جانے والی لگائی گئی آوازوں کے شور سے نیند سے بیدار ہوا۔ میں نے اپنا چھوٹا سا بیگ دبوچا اور بس سے باہر چھلانگ لگا دی۔</p>
 <center>
 <strong>15</strong>
 </center>
