--- a/stories/ur/0342_سزا.html
+++ b/stories/ur/0342_سزا.html
@@ -70,7 +70,7 @@ Adelheid Marie Bwire<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
 
-<p>ریکھو رحیم نے کیا کیا؟ میرا چھوٹا بھائی چلایا۔ رحیم بہت شرارتی اور خود غر ض ہے۔ میں نے کہا۔</p>
+<p>دیکھو رحیم نے کیا کیا؟ میرا چھوٹا بھائی چلایا۔ رحیم بہت شرارتی اور خود غر ض ہے۔ میں نے کہا۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -126,7 +126,7 @@ Adelheid Marie Bwire<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/13.jpg" /></p>
 
-<p>بعد میں رحیم معافی مانگی۔ میں کبھی دوبارہ لالچ نہیں کروں گا اُس نے وعدہ کیا۔ اور ہم سب نے اُس پر بھروسہ کر لیا۔</p>
+<p>بعد میں رحیم نےمعافی مانگی۔ میں کبھی دوبارہ لالچ نہیں کروں گا اُس نے وعدہ کیا۔ اور ہم سب نے اُس پر بھروسہ کر لیا۔</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
