--- a/stories/ur/0342_سزا_slides.html
+++ b/stories/ur/0342_سزا_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
-<p>ریکھو رحیم نے کیا کیا؟ میرا چھوٹا بھائی چلایا۔ رحیم بہت شرارتی اور خود غر ض ہے۔ میں نے کہا۔</p>
+<p>دیکھو رحیم نے کیا کیا؟ میرا چھوٹا بھائی چلایا۔ رحیم بہت شرارتی اور خود غر ض ہے۔ میں نے کہا۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/13.jpg" /></p>
-<p>بعد میں رحیم معافی مانگی۔ میں کبھی دوبارہ لالچ نہیں کروں گا اُس نے وعدہ کیا۔ اور ہم سب نے اُس پر بھروسہ کر لیا۔</p>
+<p>بعد میں رحیم نےمعافی مانگی۔ میں کبھی دوبارہ لالچ نہیں کروں گا اُس نے وعدہ کیا۔ اور ہم سب نے اُس پر بھروسہ کر لیا۔</p>
 <center>
 <strong>12</strong>
 </center>
